# PM_Agent

./: .env sample  .gitignore  CLAUDE.md  README.md  TUTORIAL.md  main.py  pyproject.toml
.claude/: settings.json
jira_pm_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pmagent/: env.py  llm.py  state.py
pmagent/agents/: common.py  diagram_agent.py  orchestrator.py  requirements.py  spreadsheet_agent.py  sprint_agent.py  ticket_agent.py
pmagent/prompts/: diagram_agent.md  orchestrator.md  prompts.py  requirements_reviewer.md  requirements_writer.md  spreadsheet_agent.md  sprint_agent.md  ticket_agent.md
pmagent/sample_data/: mock_jira.json
pmagent/skills/: __init__.py
pmagent/skills/prd/: SKILL.md  template.md
pmagent/tools/: company_knowledge.py  diagram_tools.py  jira_tools.py  mcp_tools.py  spreadsheet_tools.py
snowflake/: DEPLOYMENT_GUIDE.md  LUCID_DIAGRAM_AGENT.md  SPREADSHEET_AGENT_DESIGN.md  snowflake.yml
snowflake/procs/: classify_data_product.py  cortex_common.py  draft_diagram_brief.py  draft_prd.py  reporting_intent.py
snowflake/sql/: lucid_mcp_setup.sql
snowflake/tests/: conftest.py  test_classify_data_product.py  test_cortex_common.py  test_draft_diagram_brief.py  test_draft_prd.py  test_reporting_intent.py
tests/: test_spreadsheet_tools.py
